docs/v3/intro.md
# 基本用法

作为运行在聊天平台的机器人，指令操作是最直观、便捷的操作方式。接下来我会用一些示例，来帮助你快速上手指令操作。

一些基本概念：
- **指令**。指令是组织功能的基本单位，例如查询 B30、查定数等都是一条条指令。
- **选项**。选项可以调整指令执行过程，或为其添加一些功能。例如，我们可以为 `/a b30` 加上 `--nya` 选项，使输出的 B30 图片带上猫猫曲绘。选项始终以短横线 `-` 开头。
- **参数**。参数是提供给指令的操作数，来控制指令的目标。例如，`/a info 1f1e33`，`1f1e33` 就是提供给指令 `/a info` 的参数。

## 指令

下面以查询 B30 的流程为例，来讲解一下指令的基本使用步骤：

首先你需要绑定自己的 Arcaea 账号。在有暮雪酱的群（或频道）里，输入以下消息并发送：

```
/a bind 你的好友码或名字
```

暮雪酱会在确认用户存在后，将你的好友码保存至数据库。然后发送以下消息：

```
/a b30
```

等待一会，操作完成后，暮雪酱会把生成的图查图片发送出来。这样就完成了最基本的指令使用。很简单吧~

## 选项

可以看到，暮雪酱默认使用的曲绘是原版曲绘，也就是游戏中的曲绘。如果我们想要使用猫猫曲绘呢？只需要加上 `-n` 选项（`--nya` 也可以）：

```
/a b30 -n
```

这样暮雪就会发送猫猫曲绘了！

需要注意的是，选项应该始终位于参数的前面。例如：

```
/a best -n ringed genesis
```
上面这条是正确的使用方法，`-n` 将识别为选项，`ringed genesis` 将识别为参数。

```
/a best ringed genesis -n
```
而这一条是错误的使用方法，整个 `ringed genesis -n` 都将识别为参数，最终结果是找不到这样一首曲目。